--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./assets/footer.css">
     <!-- cooigo para boostrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.bunny.net">
+<link href="https://fonts.bunny.net/css?family=aclonica:400|alex-brush:400|amaranth:700|architects-daughter:400" rel="stylesheet" />
 </head>
 <body>
   <header>
@@ -60,7 +62,7 @@
                 <p class="card-description">
                     En esta sección encontrarán los enlaces de videos trabajados en clases.
                 </p>
-                <a href="https://example.com" class="card-button">Ver Más</a>
+                <a href="https://youtube.com/playlist?list=PLSzwPWODtAEbLDqKM3Bi2srbHVC4POMon&si=WXdNtx-MA1jZmlXq" target="_blank" class="card-button">Ver Más</a>
             </div>
             </div>
             <div class="card">
@@ -78,7 +80,7 @@
 
 <footer class="footer">
         <div class="footer-content">
-            <p class="footer-text">2025 Teología III - IPB</p>
+            <p class="footer-text">Teología III - 2025 - IPB</p>
             <p class="footer-text">Desarrollado por © Creaciones Trophia</p>
         </div>
 </footer>
