agregado de template caminos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 
             </div>
         </div>
-        <p class="footer-text">"El verbo se hizo carne"</p>
+        <p class="footer-text">""...nada podrá separarnos del amor de Dios, manifestado en Cristo Jesús... (Rm 8, 39)""</p>
     </nav>
     </header>
   <main>
@@ -72,7 +72,7 @@
                 <p class="card-description">
                     Compartimos el camino, en imagenes, realizado por las teologías.
                 </p>
-                <a href="https://example.com" class="card-button">Ver Más</a>
+                <a href="./camino.html" class="card-button">Ver Más</a>
             </div>
             </div>
     </div>
@@ -81,7 +81,7 @@
 <footer class="footer">
         <div class="footer-content">
             <p class="footer-text">Teología III - 2025 - IPB</p>
-            <p class="footer-text">Desarrollado por © Creaciones Trophia</p>
+            <p class="footer-text">Desarrollado por +Grafito</p>
         </div>
 </footer>
     <!-- Scrip interactivo -->
