agredado de favico y enlaces a carpetas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teología III - IPB</title>
+    <head>
+  <link rel="icon" href="./assets/img/ico2.ico" type="image/x-icon">
+</head>
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="./assets/header.css">
     <link rel="stylesheet" href="./assets/footer.css">
@@ -16,7 +19,7 @@
   <header>
    
        <nav class="navbar">
-        <h1 class="title">Teología III</h1>
+        <h1 class="title">Teología III - Instituto Brizuela</h1>
         <div class="dropdown">
             <button class="dropbtn">Textos fundamentales
                 <span class="indicator"></span>
@@ -39,9 +42,9 @@
             <div class="card-content">
                 <h2 class="card-title">Material de trabajo</h2>
                 <p class="card-description">
-                    En esta sección encontrarán el material teórico desarrollado en clase.
+                    En esta sección se presenta el soporte teórico de lo desarrollado en clase.
                 </p>
-                <a href="https://example.com" class="card-button">Ver Más</a>
+                <a href="https://example.com" class="card-button" target="_blank">Ingresar</a>
              </div>
 </div>
         <div class="card">
@@ -51,18 +54,18 @@
                 <p class="card-description">
                     Aquí econtrarán los PowerPonit, y otros recursos adicionales.
                 </p>
-                <a href="https://example.com" class="card-button">Ver Más</a>
+                <a href="https://drive.google.com/drive/folders/1twJPktFUBD_ugeV-gYKJdpnPyqB7GJpv?usp=drive_link" class="card-button" target="_blank">Ingresar</a>
             </div>
         </div>
 
             <div class="card">
             <img src="./assets/img/img3.png" alt="Imagen de ejemplo" class="card-image">
             <div class="card-content">
-                <h2 class="card-title">Sección de videos</h2>
+                <h2 class="card-title">Sección de videos compartidos</h2>
                 <p class="card-description">
                     En esta sección encontrarán los enlaces de videos trabajados en clases.
                 </p>
-                <a href="https://youtube.com/playlist?list=PLSzwPWODtAEbLDqKM3Bi2srbHVC4POMon&si=WXdNtx-MA1jZmlXq" target="_blank" class="card-button">Ver Más</a>
+                <a href="https://youtube.com/playlist?list=PLSzwPWODtAEbLDqKM3Bi2srbHVC4POMon&si=WXdNtx-MA1jZmlXq" target="_blank" class="card-button">Ingresar</a>
             </div>
             </div>
             <div class="card">
@@ -70,9 +73,9 @@
             <div class="card-content">
                 <h2 class="card-title">El camino en imagenes</h2>
                 <p class="card-description">
-                    Compartimos el camino, en imagenes, realizado por las teologías.
+                    Compartimos el camino, con algunas imagen realizadas en el taller de Teología.
                 </p>
-                <a href="./camino.html" class="card-button">Ver Más</a>
+                <a href="./camino.html" class="card-button">Ingresar</a>
             </div>
             </div>
     </div>
