--- a/camino.html
+++ b/camino.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teología III - IPB</title>
+    <link rel="icon" href="./assets/img/ico2.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/index.css">
     <link rel="stylesheet" href="./assets/header.css">
     <link rel="stylesheet" href="./assets/footer.css">
@@ -17,7 +18,7 @@
   <header>
    
        <nav class="navbar">
-        <h1 class="title">Teología III</h1>
+        <h1 class="title">Teología III - Instituto Brizuela</h1>
         <div class="dropdown">
             <button class="dropbtn">Textos fundamentales
                 <span class="indicator"></span>
@@ -43,7 +44,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./assets/img/foto1.jpeg" class="d-block w-100" alt="...">
+      <img src="./assets/img/foto1.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Cursillo de ingreso</h5>
         <p>Comenzando el ciclo lectivo 2025.</p>
@@ -57,28 +58,28 @@
       </div>
     </div> -->
     <div class="carousel-item">
-      <img src="./assets/img/foto3.jpeg" class="d-block w-100" alt="...">
+      <img src="./assets/img/1.png" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Eucarstía en Cura Brochero</h5>
+        <p>Agradeceiendo el camino recorrido.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="./assets/img/2.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Visita al Monasterio de Belén</h5>
-        <p>Conociendo los carismas de la Iglesia.</p>
+        <p>Conociendo los Carismas de la Iglesia.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./assets/img/foto4.jpeg" class="d-block w-100" alt="...">
+      <img src="./assets/img/3.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Visita a Cura Brochero</h5>
-        <p>Rezando por el fin de ciclo lectivo 2024.</p>
+        <h5>Cursillo de ingreso</h5>
+        <p>Comenzando el ciclo lectivo 2025.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="./assets/img/foto5.jpeg" class="d-block w-100" alt="...">
-      <div class="carousel-caption d-none d-md-block">
-        <h5>Visita a Cura Brochero</h5>
-        <p>Rezando por el fin de ciclo lectivo 2024.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="./assets/img/foto6.jpeg" class="d-block w-100" alt="...">
+      <img src="./assets/img/5.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Celebración con estudiantes de Prácticas</h5>
         <p>En oración, preparamos las Prácticas Docentes.</p>
