--- a/camino.html
+++ b/camino.html
@@ -13,6 +13,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.bunny.net">
 <link href="https://fonts.bunny.net/css?family=aclonica:400|alex-brush:400|amaranth:700|architects-daughter:400" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
   <header>
@@ -95,6 +96,10 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<!-- Botón flotante -->
+  <a href="index.html" class="floating-button" title="Volver al Menú Principal">
+    <i class="fas fa-home"></i>
+  </a>
     </main>
     <footer class="footer">
         <div class="footer-content">
@@ -104,5 +109,6 @@
 </footer>
     <!-- Scrip interactivo -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
