--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.bunny.net">
 <link href="https://fonts.bunny.net/css?family=aclonica:400|alex-brush:400|amaranth:700|architects-daughter:400" rel="stylesheet" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
   <header>
@@ -44,7 +45,7 @@
                 <p class="card-description">
                     En esta sección se presenta el soporte teórico de lo desarrollado en clase.
                 </p>
-                <a href="https://example.com" class="card-button" target="_blank">Ingresar</a>
+                <a href="./assets/Apunte  Teología III 2025.pdf" class="card-button" target="_blank">Ingresar</a>
              </div>
 </div>
         <div class="card">
