--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card-content">
                 <h2 class="card-title">Material complementario</h2>
                 <p class="card-description">
-                    Aquí econtrarán los PowerPonit, y otros recursos adicionales.
+                    Aquí econtrarán los PowerPoint, y otros recursos adicionales.
                 </p>
                 <a href="https://drive.google.com/drive/folders/1twJPktFUBD_ugeV-gYKJdpnPyqB7GJpv?usp=drive_link" class="card-button" target="_blank">Ingresar</a>
             </div>
@@ -64,7 +64,7 @@
             <div class="card-content">
                 <h2 class="card-title">Sección de videos compartidos</h2>
                 <p class="card-description">
-                    En esta sección encontrarán los enlaces de videos trabajados en clases.
+                    En este espacio accederán a enlaces de videos trabajados en clases.
                 </p>
                 <a href="https://youtube.com/playlist?list=PLSzwPWODtAEbLDqKM3Bi2srbHVC4POMon&si=WXdNtx-MA1jZmlXq" target="_blank" class="card-button">Ingresar</a>
             </div>
@@ -74,7 +74,7 @@
             <div class="card-content">
                 <h2 class="card-title">El camino en imagenes</h2>
                 <p class="card-description">
-                    Compartimos el camino, con algunas imagen realizadas en el taller de Teología.
+                    Compartimos el camino, con imágenes de lo realizado en los talleres de Teología.
                 </p>
                 <a href="./camino.html" class="card-button">Ingresar</a>
             </div>
